<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/main_fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_fragment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/pink_800"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
        android:id="@+id/urgent_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/urgent" />

    <RadioGroup
        android:id="@+id/message_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/mew_button">

        <RadioButton
            android:id="@+id/purr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_purr" />

        <RadioButton
            android:id="@+id/mew_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_mew" />

        <RadioButton
            android:id="@+id/hiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat_hiss" />

    </RadioGroup>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/received_reply_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/received_reply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/received_reply_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        tools:text="Thanks" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />


</LinearLayout>