<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".OutputFragment">

    <TextView
        android:id="@+id/output_fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/output_fragment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/green_800"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/is_urgent_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/undefined"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/undefined"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/reply_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_your_reply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/reply_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/reply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/reply" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>